# flask-react-project

./: .gitignore  README.md  package.json
backend/: pyproject.toml
backend/src/: app.py
backend/src/app/: app.py
backend/src/managers/: IdManager.py  UserManager.py
backend/src/tests/unit/: test_IdManager.py  test_userId.py
