[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["re-oh <dabrowskilucas2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
